# Sistema-Juridico-BD

./: .gitignore  README.md
LLM-Juridica/: .env.example  config.py  llm_service.py  main.py  prompts.py  pyproject.toml  schemas.py  test_client.py
src/: Principal.java  main.java
src/bean/: EstatisticasVaraBean.java  ParteBean.java  ParteComDetalhesBean.java  PessoaBean.java  ProcessoBean.java  TramiteBean.java  VaraBean.java
src/controller/: ParteController.java  PessoaController.java  ProcessoController.java  ServidorWeb.java  TramiteController.java  VaraController.java
src/db/: Conexao.java  banco.sql  caso_direito_consumidor.sql  caso_patrulha_do_consumidor.sql  inserir_caso_vapor_tech.sql
src/model/: ParteModel.java  PessoaModel.java  ProcessoModel.java  TramiteModel.java  VaraModel.java
src/view/: acordao.html  advogados.html  auth.js  busca.html  cadastro.html  diarios.html  index.html  jurisprudencia.html  login.html  modelos.html  perfil_advogado.html  processos.html  style.css  visualizar_processo.html
