[project]
name = "llm-direito"
version = "0.1.0"
description = "API NL-to-SQL para contextos jurídicos e contábeis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
]

[tool.uv]
package = false
